--- a/templates/userhub/home.html
+++ b/templates/userhub/home.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% block body %}
 <p>welcome, {{request.user}}!</p>
+<img src="{{profile.avatar}}"/>
 <nav>
 <a href="{% url 'logout' %}">logout</a>
 </nav>
