--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
 <body>
 {% block nav %}
 <nav>
+<a href="{% url 'new' %}">new</a>
 <a href="{% url 'posts' %}">posts</a>
 <a href="{% url 'profile' %}">profile</a>
 </nav>
