--- a/templates/main.html
+++ b/templates/main.html
@@ -6,6 +6,7 @@
 {{post.author}}
 {{post.created_at.isoformat}}
 <a href="{% url 'edit' post.id %}">edit</a>
+<a href="{% url 'delete' post.id %}">delete</a>
 <img src="uploads/{{post.author.profile.avatar}}" width="20px" />
 </small>
 <hr />
