--- a/templates/userhub/home.html
+++ b/templates/userhub/home.html
@@ -3,7 +3,7 @@
 <p>welcome, {{request.user}}!</p>
 <form method="post" enctype="multipart/form-data">
 {% csrf_token %}
-<p><img src="/uploads/{{profile.avatar}}"/></p>
+<p><img src="/uploads/{{profile.avatar}}" width="100px"/></p>
 <p><input name="avatar" type="file" /></p>
 <input type="submit" value="Update">
 </form>
