--- a/templates/userhub/home.html
+++ b/templates/userhub/home.html
@@ -8,6 +8,7 @@
 <input type="submit" value="Update">
 </form>
 <nav>
+<a href="{% url 'change_password' %}">change password</a>
 <a href="{% url 'logout' %}">logout</a>
 </nav>
 {% endblock %}
