--- a/templates/posts/form.html
+++ b/templates/posts/form.html
@@ -5,9 +5,8 @@
 {% csrf_token %}
 <span style="color: red;">{{error}}</span>
 {{message}}
-<p><textarea name="content" rows="20" cols="25" autofocus>
-{{post.content}}
-</textarea>
+<p>
+<textarea name="content" rows="20" cols="25" autofocus>{{post.content}}</textarea>
 </p>
 <input type="submit" value="Post" />
 </form>
