Userhub: Easy new

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@
 <a href="{% url 'new' %}">new</a>
 <a href="{% url 'posts' %}">posts</a>
 <a href="{% url 'profile' %}">profile</a>
+<a href="{% url 'user_list' %}">users</a>
 </nav>
 {% endblock %}
 {% block body %}
