--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,10 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, maximum-scale=1, minimum-scale=1">
 <title>forum.roderic.ca</title>
+<style>
+.avatar { float: right; }
+a, sup { color: red; }
+</style>
 </head>
 <body>
 {% block nav %}
