--- a/templates/posts/form.html
+++ b/templates/posts/form.html
@@ -8,6 +8,6 @@
 <p>
 <textarea name="content" rows="17" cols="45" autofocus>{{post.content}}</textarea>
 </p>
-<input type="submit" value="Post" />
+<input type="submit" value="Save" />
 </form>
 {% endblock %}
