--- a/templates/posts/post.html
+++ b/templates/posts/post.html
@@ -2,8 +2,8 @@
 <small>
 {{post.author}}
 {{post.created_at|timesince}} ago
-<a href="{% url 'edit' post.id %}">edit</a>
-<a href="{% url 'delete' post.id %}">delete</a>
+<a href="{% url 'posts-edit' post.id %}">edit</a>
+<a href="{% url 'posts-delete' post.id %}">delete</a>
 <img class="avatar" src="/uploads/{{post.author.profile.avatar}}" width="40px"/>
 </small>
 <br>
