--- a/templates/userhub/home.html
+++ b/templates/userhub/home.html
@@ -11,7 +11,7 @@
 <input type="submit" value="Update">
 </form>
 <nav>
-<a href="{% url 'change_password' %}">change password</a>
+<a href="{% url 'change-password' %}">change password</a>
 <a href="{% url 'logout' %}">logout</a>
 </nav>
 {% endblock %}
