--- a/templates/posts/quickpost_form.html
+++ b/templates/posts/quickpost_form.html
@@ -7,7 +7,7 @@
 function createOrUpdate(slug) {
     var existing = document.getElementById(slug.id);
     if (!existing) {
-        container.innerHTML += "<hr>" + slug.html;
+        container.innerHTML += slug.html;
     } else {
         existing.outerHTML = slug.html;
     }
