--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
 .avatar { float: right; }
 a, sup { color: red; }
 #quickpost { position: fixed; bottom: 0; }
+code { font-family: monospace; }
 spoiler { color: white; } /* should be same as background */
 </style>
 </head>
