--- a/templates/posts/post.html
+++ b/templates/posts/post.html
@@ -1,12 +1,11 @@
 {% load posts_tags %}
 <div id="{{post.id}}">
+<hr>
 <small>
 {{post.author}}
 {{post.created_at|timesince}} ago
-<a href="{% url 'posts-edit' post.id %}">edit</a>
-<a href="{% url 'posts-delete' post.id %}">delete</a>
+<a href="{% url 'posts-edit' post.id %}">detail</a>
 <img class="avatar" src="/uploads/{{post.author.profile.avatar}}" width="40px"/>
 </small>
-<br>
-{{post.content|linebreaks|urlize|bleach}}
+<p>{{post.content|linebreaksbr|urlizetrunc:35|bleach}}</p>
 </div>
