--- a/templates/userhub/user_list.html
+++ b/templates/userhub/user_list.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load humanize %}
 {% block body %}
 <table>
 <tr>
@@ -8,7 +9,7 @@
 {% for user in user_list %}
 <tr>
 <td>{{user.get_username}}</td>
-<td>{{user.last_login|timesince}} ago</td>
+<td>{{user.last_login|naturaltime}}</td>
 </tr>
 {% endfor %}
 </table>
