--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
 a, sup { color: red; }
 #quickpost { position: fixed; bottom: 0; }
 code { font-family: monospace; }
+pre { overflow: auto; width: 95%; }
 spoiler { color: white; } /* should be same as background */
 </style>
 </head>
