--- a/templates/posts/post_list.html
+++ b/templates/posts/post_list.html
@@ -11,6 +11,6 @@
 No posts.
 {% endfor %}
 </div>
-<div id="latest" style="color: transparent;">{% now 'Y-m-d H:i' %}</div>
+<div id="latest" style="color: transparent;">{% now 'Y-m-d H:i:sO' %}</div>
 {% include 'posts/quickpost_form.html' %}
 {% endblock %}
