--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,7 @@ spoiler { color: white; } /* should be same as background */
 {% block actions %}
 {% endblock %}
 <a href="{% url 'topics-list' %}">topics</a>
+<a href="{% url 'tags-list' %}">tags</a>
 <a href="{% url 'profile' %}">profile</a>
 </nav>
 {% endblock %}
