--- a/templates/posts/quickpost_form.html
+++ b/templates/posts/quickpost_form.html
@@ -1,6 +1,6 @@
 <form id="quickpost" method="post" onsubmit="return query(true)" action="#latest">
 {% csrf_token %}
-<input name="content" autofocus autocomplete="off" />
+<input name="content" autocomplete="off" />
 <input type="submit" value="Quickpost" />
 </form>
 <script>
