--- a/templates/posts/post.html
+++ b/templates/posts/post.html
@@ -5,6 +5,9 @@
 {{post.author}}
 {{post.created_at}}
 <a href="{% url 'posts-edit' post.id %}">detail</a>
+{% if topic and request.user.is_superuser %}
+<a href="{% url 'posts-squash' topic.id post.id %}">squash</a>
+{% endif %}
 {% if forloop %} #{{forloop.counter}}{% endif %}
 <img class="avatar" src="/uploads/{{post.author.profile.avatar}}" width="40px"/>
 </small>
