--- a/templates/base.html
+++ b/templates/base.html
@@ -4,10 +4,12 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, maximum-scale=1, minimum-scale=1">
 <title>forum.roderic.ca</title>
+<link rel="stylesheet" href="/static/spectre.min.css"/>
 <style>
+body { padding: 0px 3px; margin: 0px auto; max-width: 600px; }
 .avatar { float: right; }
-a, sup { color: red; }
 #quickpost { position: fixed; bottom: 0; }
+textarea { display: block; width: 22em; height: 8em; }
 code { font-family: monospace; }
 pre { overflow: auto; width: 95%; }
 spoiler { color: white; } /* should be same as background */
@@ -23,6 +25,7 @@ spoiler { color: white; } /* should be same as background */
 <a href="{% url 'profile' %}">profile</a>
 {% if request.user.is_superuser %}
 <a href="{% url 'images-list' %}">images</a>
+<a href="{% url 'user-list' %}">users</a>
 {% endif %}
 </nav>
 {% endblock %}
