Post: Auto-update

--- a/templates/posts/post_list.html
+++ b/templates/posts/post_list.html
@@ -13,5 +13,5 @@ No posts.
 {% endfor %}
 </div>
 <div id="latest" style="color: transparent;">{% now 'Y-m-d H:i:sO' %}</div>
-{% include 'posts/quickpost_form.html' %}
+{% include 'posts/post_live.html' %}
 {% endblock %}
