Fix URL formatting

--- a/templates/base.html
+++ b/templates/base.html
@@ -31,6 +31,9 @@ article a { color: red; }
     display: block;
     text-align: center;
 }
+.breakable {
+    overflow-wrap: break-word;
+}
 </style>
 </head>
 <body>
