--- a/templates/userhub/images.html
+++ b/templates/userhub/images.html
@@ -1,4 +1,3 @@
-{% extends 'base.html' %}
 {% block body %}
 <form method="post" enctype="multipart/form-data">
 {% csrf_token %}
@@ -6,19 +5,13 @@
 <input type="submit" value="Upload" />
 </form>
 
-<table>
 {% for image in image_list %}
-<tr>
-<td><img src="/uploads/{{image.raw}}" width="200"/></td>
-<td>{{image.uploader}}</td>
-<td>{{image.created_at}}</td>
-<td>
+<img src="/uploads/{{image.raw}}" width="150" />
+{% if request.user.is_superuser %}
 <form method="post" action="{% url 'images-delete' image.id %}">
 {% csrf_token %}
-<input type="submit" value="Delete"/>
+<input type="submit" value="Delete" />
 </form>
-</td>
-</tr>
+{% endif %}
 {% endfor %}
-</table>
 {% endblock %}
