--- a/templates/userhub/images.html
+++ b/templates/userhub/images.html
@@ -6,7 +6,10 @@
 </form>
 
 {% for image in image_list %}
-<img src="/uploads/{{image.raw}}" width="150" />
+<img src="/uploads/{{image.thumbnail}}" width="150" /><br>
+<small><small>
+&lt;img src="https://forum.roderic.ca/uploads/{{image.raw}}"/&gt;
+</small></small>
 {% if request.user.is_superuser %}
 <form method="post" action="{% url 'images-delete' image.id %}">
 {% csrf_token %}
