--- a/templates/base.html
+++ b/templates/base.html
@@ -36,8 +36,8 @@ article a { color: red; }
     overflow-wrap: break-word;
 }
 .scroll-wrapper {
-    height: 100px;
-    overflow-y: scroll;
+    overflow-x: scroll;
+    overflow-y: hidden;
     -webkit-overflow-scrolling: touch;"
 }
 #htmlInput { height: 6em; }
