--- a/templates/posts/post_form.html
+++ b/templates/posts/post_form.html
@@ -15,6 +15,7 @@ input[name=delete] { position: absolute; bottom: 0; right: 0;}
 <div id="htmlPreview">{{post.content|linebreaksbr|bleach}}</div>
 
 <div id="htmlEditor" class="tabbed">
+<input name="tab" type="radio" id="tab0"><label for="tab0">hide</label>
 <input name="tab" type="radio" id="tab1" checked><label for="tab1">html</label>
 <input name="tab" type="radio" id="tab2"><label for="tab2">img</label>
 <input name="tab" type="radio" id="tab3"><label for="tab3">delete</label>
